Implementado o método de normalização de semitons

--- a/.gitignore
+++ b/.gitignore
@@ -405,7 +405,7 @@ FodyWeavers.xsd
 *.sln.iml
 
 # Projects
-Transposer.ApplicationTest
+SparksMusic.ApplicationTest
 
 ### VisualStudio Patch ###
 # Additional files built by Visual Studio
