--- a/SparksMusic.Test/SparksMusic.Test.csproj
+++ b/SparksMusic.Test/SparksMusic.Test.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>net7.0</TargetFramework>
 
     <IsPackable>false</IsPackable>
-    <ReleaseVersion>1.0.0</ReleaseVersion>
+    <Configurations>Release;Debug</Configurations>
   </PropertyGroup>
 
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
